# save-grail-json

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  PRD.md  README.md  drop-tables.py  install-hooks.sh  migrate_expand_schema.sql  pyproject.toml  requirements.txt  version_manager.py
examples/: grail_files_202512270225.txt  trade-plan-MES-2025-12-26.json  trade-plan-MNQ-2025-12-26.json  trade-plan-SPY-2025-12-23.json
src/: __init__.py  cli.py  config.py  database.py  ingestion.py  tui.py
